# Quixant.Tests.NUnitTests

./: .gitignore  CMakeLists.txt  Fody_Test.cs  MockLibrary.cs  Pose_Test.cs  QxComTest.cs  README.md  TestNUnit.sln  TestNUnitCallback.csproj  TestRunner.csproj  TestRunner.sln  UnitTest1.cs
001-TestRunner/: CMakeLists.txt
001-TestRunner-NUnit/: UnitTest1.cs
001-TestRunner/src/: TestRunner.cpp
002-DotNetWrapper/: AssemblyInfo.cs  DotNetWrapper.csproj  DotNetWrapper.sln  LibWrapper.cs
002-DotNetWrapper/DotNetWrapper/: DotNetWrapper.csproj  LibWrapper.cs
003-MockedLib/: CMakeLists.txt
003-MockedLib/include/: native_lib_header.h
003-MockedLib/src/: mocked_lib.cpp
004-FactoryHelper/FactoryHelper/: FactoryHelper.cs  FactoryHelper.sln
Classes/: NativeBridge.cs
Fake Classes/: Native.cs  WrapperLibrary.cs  Wrapper_Library.cs
Helpers/: FodyHelper.cs  FodyInterceptor.cs
MockedLib/: MockedLib.vcxproj  MockedLib.vcxproj.filters
MockedLib/include/: mocked_lib_header.h  native_lib_header.h
MockedLib/src/: mocked_lib.cpp
MockedLib/x64/Debug/: MockedLib.dll.recipe  MockedLib.ilk  vc143.idb
MockedLib/x64/Debug/MockedLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MockedLib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
